fix alignnment

--- a/css/access.css
+++ b/css/access.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    margin-top: -50px;
     display: flex;
     justify-content: center; /* Horizontal center */
     align-items: center;     /* Vertical center */
@@ -91,3 +92,15 @@ button.secondary {
 }
 
 .hidden { display: none !important; }
+
+@media screen and (max-width: 900px) {
+
+    body {
+        font-size: 16px;
+    }
+
+    /* .recipe-image {
+        aspect-ratio: 1/1;     
+    } */
+    
+}
